[package]

name = "synthrs"
version = "0.0.1"
authors = [
    "ng.guoyou@gmail.com",
    "stacey.ell@gmail.com"
]

[dependencies]
byteorder = "*"

[lib]

name = "synthrs"
path = "src/lib.rs"

[[example]]

name = "simple"
path = "examples/simple.rs"

[[example]]

name = "telecoms"
path = "examples/telecoms.rs"

[[example]]

name = "filters"
path = "examples/filters.rs"

[[example]]

name = "midi"
path = "examples/midi.rs"
